--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
-74:d0:2b:90:1c:80
-Uzhviy78
-643k63wni7
+<!DOCTYPE html>
+<html>
+<head>
+<title>Page Title</title>
+</head>
+<body>
 
-netis_ C42011
-password
+<h1>This is a Heading</h1>
+<p>This is a paragraph.</p>
+
+</body>
+</html>
