Add privacy policy

--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-
+<h1>Политика конфиденциальности для https://play.google.com/store/apps/details?id=viked.savecontacts</h1>
+<p>Для работы приложения требуется разрешение на чтение контактов. Пользователь в настройках сам определяет какие данные контакта может использовать приложение.</p>
+<p>Приложение хранит данные пользователя только во время работы: с момента запуска и до закрытия.</p>
+<p>Приложение создает копию данных в виде текстового файла и размещает его по указанному в настройках пути. Разработчик не несет ответственности за использование созданного приложением файла.</p>
+<p>Приложение собирает информацию о действиях пользователя в приложении и использует ее согласно с https://fabric.io/privacy</p>
+<p>Используя приложение Вы соглашаетесь с данной политикой конфиденциальности.</p>
 </body>
 </html>
